--- a/2.MathsCalculationGame/index.html
+++ b/2.MathsCalculationGame/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Game of Maths</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-        <link rel="stylesheet" href="/Projects/1. MathsGame(Js)/styling.css">
+        <link rel="stylesheet" href="/Projects/2.MathsCalculationGame/styling.css">
     </head>
     <body>
         <div id="container">
